// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`app generated files content - as-provided general application should add nuxt entries in .gitignore 1`] = `
"
# Nuxt dev/build outputs
.output
.data
.nuxt
.nitro
.cache"
`;

exports[`app generated files content - as-provided general application should configure eslint correctly 1`] = `
"{
  "extends": ["@nuxt/eslint-config", "../.eslintrc.json"],
  "ignorePatterns": ["!**/*"],
  "overrides": [
    {
      "files": ["*.ts", "*.tsx", "*.js", "*.jsx", "*.vue"],
      "rules": {
        "vue/multi-word-component-names": "off"
      }
    }
  ]
}
"
`;

exports[`app generated files content - as-provided general application should configure nuxt correctly 1`] = `
"import { nxViteTsPaths } from '@nx/vite/plugins/nx-tsconfig-paths.plugin';
import { defineNuxtConfig } from 'nuxt/config';

// https://nuxt.com/docs/api/configuration/nuxt-config
export default defineNuxtConfig({
  srcDir: 'src',
  buildDir: 'dist/my-app/.nuxt',
  devtools: { enabled: true },
  devServer: {
    host: 'localhost',
    port: 4200,
  },
  typescript: {
    typeCheck: true,
    tsConfig: {
      extends: 'my-app/tsconfig.app.json',
    },
  },
  imports: {
    autoImport: false,
  },

  vite: {
    plugins: [nxViteTsPaths()],
  },
  nitro: {
    output: {
      dir: 'dist/my-app/.output',
      serverDir: 'dist/my-app/.output/server',
      publicDir: 'dist/my-app/.output/public',
    },
  },
});
"
`;

exports[`app generated files content - as-provided general application should configure tsconfig and project.json correctly 1`] = `
"{
  "name": "my-app",
  "$schema": "../node_modules/nx/schemas/project-schema.json",
  "projectType": "application",
  "sourceRoot": "my-app/src",
  "targets": {
    "serve": {
      "executor": "@nx/nuxt:serve",
      "outputs": ["{options.outputPath}"],
      "options": {}
    },
    "build": {
      "executor": "@nx/nuxt:build",
      "outputs": ["{options.outputPath}"],
      "options": {
        "outputPath": "dist/my-app"
      }
    },
    "lint": {
      "executor": "@nx/eslint:lint",
      "outputs": ["{options.outputFile}"],
      "options": {
        "lintFilePatterns": ["my-app/**/*.{ts,tsx,js,jsx,vue}"]
      }
    },
    "test": {
      "executor": "@nx/vite:test",
      "outputs": ["{options.reportsDirectory}"],
      "options": {
        "passWithNoTests": true,
        "reportsDirectory": "../coverage/my-app",
        "config": "my-app/vitest.config.ts"
      }
    }
  }
}
"
`;

exports[`app generated files content - as-provided general application should configure tsconfig and project.json correctly 2`] = `
"{
  "compilerOptions": {},
  "files": [],
  "include": [],
  "references": [
    {
      "path": "./tsconfig.app.json"
    },
    {
      "path": "./tsconfig.spec.json"
    }
  ],
  "extends": "../tsconfig.base.json"
}
"
`;

exports[`app generated files content - as-provided general application should configure vitest correctly 1`] = `
"import { defineVitestConfig } from 'nuxt-vitest/config';
import { nxViteTsPaths } from '@nx/vite/plugins/nx-tsconfig-paths.plugin';

export default defineVitestConfig({
  plugins: [nxViteTsPaths()],
  test: {
    globals: true,
    cache: {
      dir: '../node_modules/.vitest',
    },
    include: ['my-app/src/**/*.{test,spec}.{js,mjs,cjs,ts,mts,cts,jsx,tsx}'],
    environment: 'nuxt',
  },
});
"
`;

exports[`app generated files content - as-provided general application should configure vitest correctly 2`] = `
"{
  "extends": "./tsconfig.json",
  "compilerOptions": {
    "outDir": "../dist/out-tsc",
    "types": ["vitest/globals", "vitest/importMeta", "vite/client", "node"],
    "composite": true
  },
  "include": [
    "vitest.config.ts",
    "src/**/*.test.ts",
    "src/**/*.spec.ts",
    "src/**/*.test.tsx",
    "src/**/*.spec.tsx",
    "src/**/*.test.js",
    "src/**/*.spec.js",
    "src/**/*.test.jsx",
    "src/**/*.spec.jsx",
    "src/**/*.d.ts"
  ]
}
"
`;

exports[`app generated files content - as-provided general application should configure vitest correctly 3`] = `
"{
  "compilerOptions": {},
  "files": [],
  "include": [],
  "references": [
    {
      "path": "./tsconfig.app.json"
    },
    {
      "path": "./tsconfig.spec.json"
    }
  ],
  "extends": "../tsconfig.base.json"
}
"
`;

exports[`app generated files content - as-provided general application should create all new files in the correct location 1`] = `
[
  ".prettierrc",
  "package.json",
  "nx.json",
  "tsconfig.base.json",
  ".prettierignore",
  "my-app/project.json",
  "my-app/.npmrc",
  "my-app/nuxt.config.ts",
  "my-app/src/app.vue",
  "my-app/src/components/NxWelcome.vue",
  "my-app/src/pages/about.vue",
  "my-app/src/pages/index.vue",
  "my-app/src/public/.gitkeep",
  "my-app/src/public/favicon.ico",
  "my-app/src/server/api/greet.ts",
  "my-app/src/server/tsconfig.json",
  "my-app/tsconfig.app.json",
  "my-app/tsconfig.json",
  ".gitignore",
  ".eslintrc.json",
  ".eslintignore",
  "my-app/.eslintrc.json",
  "my-app/vitest.config.ts",
  "my-app/tsconfig.spec.json",
  "my-app-e2e/project.json",
  "my-app-e2e/src/e2e/app.cy.ts",
  "my-app-e2e/src/support/app.po.ts",
  "my-app-e2e/src/support/e2e.ts",
  "my-app-e2e/src/fixtures/example.json",
  "my-app-e2e/src/support/commands.ts",
  "my-app-e2e/cypress.config.ts",
  "my-app-e2e/tsconfig.json",
  "my-app-e2e/.eslintrc.json",
]
`;

exports[`app generated files content - as-provided styles setup should configure css 1`] = `
"import { nxViteTsPaths } from '@nx/vite/plugins/nx-tsconfig-paths.plugin';
import { defineNuxtConfig } from 'nuxt/config';

// https://nuxt.com/docs/api/configuration/nuxt-config
export default defineNuxtConfig({
  srcDir: 'src',
  buildDir: 'dist/myapp1/.nuxt',
  devtools: { enabled: true },
  devServer: {
    host: 'localhost',
    port: 4200,
  },
  typescript: {
    typeCheck: true,
    tsConfig: {
      extends: 'myapp1/tsconfig.app.json',
    },
  },
  imports: {
    autoImport: false,
  },

  css: ['~/assets/css/styles.css'],

  vite: {
    plugins: [nxViteTsPaths()],
  },
  nitro: {
    output: {
      dir: 'dist/myapp1/.output',
      serverDir: 'dist/myapp1/.output/server',
      publicDir: 'dist/myapp1/.output/public',
    },
  },
});
"
`;

exports[`app generated files content - as-provided styles setup should configure less 1`] = `
"import { nxViteTsPaths } from '@nx/vite/plugins/nx-tsconfig-paths.plugin';
import { defineNuxtConfig } from 'nuxt/config';

// https://nuxt.com/docs/api/configuration/nuxt-config
export default defineNuxtConfig({
  srcDir: 'src',
  buildDir: 'dist/myapp3/.nuxt',
  devtools: { enabled: true },
  devServer: {
    host: 'localhost',
    port: 4200,
  },
  typescript: {
    typeCheck: true,
    tsConfig: {
      extends: 'myapp3/tsconfig.app.json',
    },
  },
  imports: {
    autoImport: false,
  },

  css: ['~/assets/css/styles.less'],

  vite: {
    plugins: [nxViteTsPaths()],
  },
  nitro: {
    output: {
      dir: 'dist/myapp3/.output',
      serverDir: 'dist/myapp3/.output/server',
      publicDir: 'dist/myapp3/.output/public',
    },
  },
});
"
`;

exports[`app generated files content - as-provided styles setup should configure scss 1`] = `
"import { nxViteTsPaths } from '@nx/vite/plugins/nx-tsconfig-paths.plugin';
import { defineNuxtConfig } from 'nuxt/config';

// https://nuxt.com/docs/api/configuration/nuxt-config
export default defineNuxtConfig({
  srcDir: 'src',
  buildDir: 'dist/myapp2/.nuxt',
  devtools: { enabled: true },
  devServer: {
    host: 'localhost',
    port: 4200,
  },
  typescript: {
    typeCheck: true,
    tsConfig: {
      extends: 'myapp2/tsconfig.app.json',
    },
  },
  imports: {
    autoImport: false,
  },

  css: ['~/assets/css/styles.scss'],

  vite: {
    plugins: [nxViteTsPaths()],
  },
  nitro: {
    output: {
      dir: 'dist/myapp2/.output',
      serverDir: 'dist/myapp2/.output/server',
      publicDir: 'dist/myapp2/.output/public',
    },
  },
});
"
`;

exports[`app generated files content - as-provided styles setup should not configure styles 1`] = `
"import { nxViteTsPaths } from '@nx/vite/plugins/nx-tsconfig-paths.plugin';
import { defineNuxtConfig } from 'nuxt/config';

// https://nuxt.com/docs/api/configuration/nuxt-config
export default defineNuxtConfig({
  srcDir: 'src',
  buildDir: 'dist/myapp4/.nuxt',
  devtools: { enabled: true },
  devServer: {
    host: 'localhost',
    port: 4200,
  },
  typescript: {
    typeCheck: true,
    tsConfig: {
      extends: 'myapp4/tsconfig.app.json',
    },
  },
  imports: {
    autoImport: false,
  },

  vite: {
    plugins: [nxViteTsPaths()],
  },
  nitro: {
    output: {
      dir: 'dist/myapp4/.output',
      serverDir: 'dist/myapp4/.output/server',
      publicDir: 'dist/myapp4/.output/public',
    },
  },
});
"
`;
